--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=TravelPlan
-spring.datasource.url=jdbc:postgresql://localhost:5432/travel_plan
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/TravelPlan
 spring.datasource.username=postgres
 spring.datasource.password=student123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.docker.compose.enabled=false
+
